# tubes_pbp

./: .gitignore  COMPLETION_SUMMARY.md  Makefile  config.yml  faucet.sh  go.mod  go.sum  readme.md
.github/workflows/: go-unit.yml  lint-pr.yml  lint.yml
app/: app.go  app_config.go  config.go  export.go  sim_test.go
apps/: package-lock.json
apps/admin/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
apps/backend/: .env.example  .gitignore  README.md  package-lock.json  package.json  test-api.sh
apps/user/: index.html  package-lock.json  package.json  (+2 more)
chain/: Makefile  buf.yaml  config.yml  go.mod  readme.md
contracts/lelang/: Cargo.toml
contracts/lelang/.cargo/: config.toml
contracts/lelang/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  zkp_verifier.rs
docs/: LAPORAN_FINAL.md  LAPORAN_IMPLEMENTASI.md  LAPORAN_TEKNIS.md  PEMBAGIAN_TUGAS.md  PERAN_DAN_ENTITAS_SISTEM.md  api-spec.md  docs.go  e2e-test-report.md  hasil_verifikasi_perbaikan.md  laporan_status_proyek.md  stress-test-report.md  tahap-f-checkpoint.md  tahap-f-testing.md  tahap-g-checkpoint.md  tahap-h-plan.md  tahap-i-guide.md  zkp-performance.md
proto/: buf.gen.swagger.yaml
scripts/: setup-local-nodes-wsl.sh  setup-local-nodes.sh
zkp-circuits/: circuit.circom  generate-proof.js  input.json  package-lock.json  package.json  proof-metadata.json  proof.json  public.json  setup-trusted.sh  test.circom  test2.circom  test3.circom  test_private.circom  test_public.circom  test_simple.circom  verification_key.json  verify-proof.js
(+113 files in other folders)
